--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
     --branco-principal: #FFFFFF;
     --cinza-secundario: #C0C0C0;
-    --botao-azul: #9300a7;
+    --botao-azul: #167bf7;
     --cor-de-fundo: #00030C;
     --font-principal: 'Inter';
     --botao-azul-efeito: #3c92fa;
