responsividade mobile com media query

--- a/style.css
+++ b/style.css
@@ -158,3 +158,48 @@ body {
     color: #00030C;
 }
 
+@media screen and (max-width: 768px) {
+    .container {
+        display: block;
+        background-image: none;
+        height: 60vh;
+    }
+
+    .container__imagem {
+        width: 50vw;
+    }
+
+    .container__caixa {
+        margin: 2em 2em;
+    }
+
+    .secundario {
+        margin: 0;
+        text-align: center;
+    }
+
+    .secundario__imagem {
+        width: 50vw;
+    }
+
+    .dispositivos {
+        margin-bottom: 10em;
+    }
+
+    .dispositivos__lista {
+        display: block;
+    }
+
+    .rodape__lista {
+        display: block;
+        margin-top: 1em
+    }
+
+    .lista__link a {
+        margin-left: 0em;
+        text-align: center;
+        
+       
+        
+    }
+}
